SM-Dev/src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>AvailableQuantity__c</fullName>
        <label>AvailableQuantity</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Tells us if the Line Item is created and linked to the order.</description>
        <label>Is Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <label>ItemNumber</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Json_Text__c</fullName>
        <label>Json Text</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LineTax__c</fullName>
        <label>LineTax</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Status__c</fullName>
        <formula>IF( TEXT(RejectReason__c) == Null , IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000009R70&quot;,&apos;&apos;,10,10)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=0150t0000009R75&quot;,&apos;&apos;,10,10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <label>Line Total</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaterialId__c</fullName>
        <formula>PricebookEntry.Product2.ENSX_EDM__Material__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MaterialId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetLineValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NetLineValue</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Line_Value__c</fullName>
        <label>Net Line Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Bonus_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commerce Cloud Bonus Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Campaign_Name__c</fullName>
        <label>Commerce Cloud Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Coupon_Code__c</fullName>
        <label>Commerce Cloud Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Discount__c</fullName>
        <label>Commerce Cloud Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Size__c</fullName>
        <label>Commerce Cloud Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Total_price__c</fullName>
        <formula>(UnitPrice * Quantity) - (UnitPrice * Quantity)* OSF_DWback__Demandware_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Product_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product Parent</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentLineNumber__c</fullName>
        <label>ParentLineNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RejectReason__c</fullName>
        <description>This is the reject reason to be selected for deleting the Line Items.</description>
        <label>Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>61</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>63</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>71</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>73</fullName>
                </value>
                <value>
                    <fullName>74</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>76</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>G1</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>G3</fullName>
                </value>
                <value>
                    <fullName>G4</fullName>
                </value>
                <value>
                    <fullName>J1</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>NR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>custpreview__c</fullName>
        <label>custpreview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>productkey__c</fullName>
        <formula>PricebookEntry.Product2.productkey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>productkey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ramsideloc__c</fullName>
        <label>ramsideloc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warpedpreview__c</fullName>
        <label>warpedpreview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>